<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_start">Start Game</string>
    <string name="hello_pause">II</string>
    <string name="hello_continue">Continue</string>
    <string name="hello_main">Main Menu</string>
    <string name="hello_members">Team Members:\nAnne Gent\nSanjana Mendu\nJake Saltzman\nYanre Wu\nWeiheng Su</string>
    <string name="hello_class">CS 2110, Fall 2014, University of Virginia</string>
    <string name="right_arrow">►</string>
    <string name="left_arrow">◀</string>
    <string name="up_arrow">▲</string>
    <string name="down_arrow">▼</string>
    <string name="kill">✪</string>

</resources>
