<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pause"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/left"
        android:layout_alignParentBottom="true"
        android:contentDescription="@null"
        android:src="@drawable/red_button1" />

    <ImageView
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/left"
        android:contentDescription="@null"
        android:src="@drawable/dpad_button" />

    <ImageView
        android:id="@+id/kill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/up"
        android:layout_marginRight="92dp"
        android:contentDescription="@null"
        android:src="@drawable/dpad_button" />

    <ImageView
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up"
        android:layout_toRightOf="@+id/up"
        android:contentDescription="@null"
        android:src="@drawable/dpad_button" />

    <ImageView
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/down"
        android:layout_toLeftOf="@+id/kill"
        android:contentDescription="@null"
        android:src="@drawable/dpad_button" />

    <ImageView
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kill"
        android:layout_toLeftOf="@+id/right"
        android:contentDescription="@null"
        android:src="@drawable/dpad_button" />

    <TextView
        android:id="@+id/continue_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/kill_g"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/hello_pause"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/left_g"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/kill_g"
        android:layout_alignBottom="@+id/kill_g"
        android:layout_toLeftOf="@+id/kill"
        android:text="@string/left_arrow"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/up_g"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/right"
        android:text="@string/up_arrow"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/down_g"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/down"
        android:layout_toLeftOf="@+id/right"
        android:text="@string/down_arrow"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/right_g"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/right"
        android:layout_alignTop="@+id/right"
        android:text="@string/right_arrow"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/kill_g"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/up"
        android:layout_below="@+id/up"
        android:text="@string/kill"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

</RelativeLayout>